Find quick wins in recently-shipped BCD keys

--- a/features/aria-attribute-reflection.yml
+++ b/features/aria-attribute-reflection.yml
@@ -1,3 +1,12 @@
 name: ARIA attribute reflection
 description: WAI-ARIA attributes have corresponding properties on `Element` and `ElementInternals` objects.
 spec: https://w3c.github.io/aria/#accessibilityroleandproperties-correspondence
+# TODO: api.Element.ariaBrailleLabel
+# TODO: api.Element.ariaBrailleRoleDescription
+# TODO: api.Element.ariaColIndexText
+# TODO: api.Element.ariaDescription
+# TODO: api.Element.ariaRowIndexText
+# TODO: api.ElementInternals.ariaBrailleLabel
+# TODO: api.ElementInternals.ariaBrailleRoleDescription
+# TODO: api.ElementInternals.ariaColIndexText
+# TODO: api.ElementInternals.ariaRowIndexText
