--- a/features/web-audio.yml
+++ b/features/web-audio.yml
@@ -43,6 +43,7 @@ compat_features:
   - api.AudioContext.createMediaStreamDestination
   - api.AudioContext.createMediaStreamSource
   - api.AudioContext.createMediaStreamTrackSource
+  - api.AudioContext.error_event
   - api.AudioContext.getOutputTimestamp
   - api.AudioContext.outputLatency
   - api.AudioContext.resume
