--- a/features/document-caretpositionfrompoint.yml
+++ b/features/document-caretpositionfrompoint.yml
@@ -3,3 +3,5 @@ description: The `document.caretPositionFromPoint()` method finds an insertion p
 spec: https://drafts.csswg.org/cssom-view-1/#dom-document-caretpositionfrompoint
 compat_features:
   - api.Document.caretPositionFromPoint
+  # TODO: Fill out CaretPosition
+  - api.CaretPosition
