--- a/features/blocking-render.yml.dist
+++ b/features/blocking-render.yml.dist
@@ -14,3 +14,4 @@ compat_features:
   - html.elements.link.blocking
   - html.elements.script.blocking
   - html.elements.style.blocking
+  - http.headers.Link.blocking
