--- a/features/counters.yml.dist
+++ b/features/counters.yml.dist
@@ -81,6 +81,12 @@ compat_features:
   #   safari: ≤13.1
   #   safari_ios: ≤13.4
   - css.properties.counter-increment.list-item
+
+  # baseline: false
+  # support:
+  #   edge: "12"
+  #   firefox: "1"
+  #   firefox_android: "25"
   - css.properties.counter-reset.list-item
 
   # baseline: false
