--- a/features/draft/spec/css-scroll-snap-2.yml.dist
+++ b/features/draft/spec/css-scroll-snap-2.yml.dist
@@ -60,8 +60,9 @@ compat_features:
   - css.properties.scroll-padding-inline-start.auto
   - css.properties.scroll-padding-inline.auto
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-04-05
+  # baseline_high_date: 2024-10-05
   # support:
   #   chrome: "69"
   #   chrome_android: "69"
@@ -72,8 +73,9 @@ compat_features:
   #   safari_ios: ≤13.4
   - css.properties.scroll-snap-type.none
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-04-05
+  # baseline_high_date: 2024-10-05
   # support:
   #   chrome: "69"
   #   chrome_android: "69"
