--- a/features/draft/spec/partitioned-cookies.yml.dist
+++ b/features/draft/spec/partitioned-cookies.yml.dist
@@ -7,5 +7,7 @@ status:
     chrome: "114"
     chrome_android: "114"
     edge: "114"
+    firefox: "131"
+    firefox_android: "131"
 compat_features:
   - http.headers.Set-Cookie.Partitioned
