--- a/features/draft/spec/svg2.yml.dist
+++ b/features/draft/spec/svg2.yml.dist
@@ -946,7 +946,7 @@ compat_features:
   #   firefox_android: "51"
   #   safari: "10"
   #   safari_ios: "10"
-  - svg.global_attributes.data
+  - svg.global_attributes.data_attributes
 
   # baseline: high
   # baseline_low_date: 2020-03-24
