--- a/features/iterator-methods.yml.dist
+++ b/features/iterator-methods.yml.dist
@@ -7,6 +7,8 @@ status:
     chrome: "122"
     chrome_android: "122"
     edge: "122"
+    firefox: "131"
+    firefox_android: "131"
 compat_features:
   - javascript.builtins.Iterator.Iterator
   - javascript.builtins.Iterator.drop
