--- a/features/target-text.yml.dist
+++ b/features/target-text.yml.dist
@@ -7,5 +7,7 @@ status:
     chrome: "89"
     chrome_android: "89"
     edge: "89"
+    firefox: "131"
+    firefox_android: "131"
 compat_features:
   - css.selectors.target-text
