--- a/features/before-after.yml.dist
+++ b/features/before-after.yml.dist
@@ -42,23 +42,15 @@ compat_features:
   - css.selectors.after
 
   # baseline: high
-  # baseline_low_date: ≤2017-03-27
-  # baseline_high_date: ≤2019-09-27
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
   # support:
   #   chrome: "26"
   #   chrome_android: "26"
   #   edge: "12"
   #   firefox: "4"
   #   firefox_android: "4"
-  #   safari: ≤10.1
-  #   safari_ios: ≤10.3
-  - css.selectors.before.animation_and_transition_support
-
-  # baseline: false
-  # support:
-  #   chrome: "26"
-  #   chrome_android: "26"
-  #   edge: "12"
-  #   firefox: "4"
-  #   firefox_android: "4"
+  #   safari: "7"
+  #   safari_ios: "7"
   - css.selectors.after.animation_and_transition_support
+  - css.selectors.before.animation_and_transition_support
