--- a/features/createimagebitmap.yml.dist
+++ b/features/createimagebitmap.yml.dist
@@ -77,7 +77,6 @@ compat_features:
   #   safari: "15"
   #   safari_ios: "15"
   - api.createImageBitmap.options_imageOrientation_parameter
-  - api.createImageBitmap.options_premultiplyAlpha_parameter
 
   # baseline: high
   # baseline_low_date: 2022-02-08
@@ -118,6 +117,18 @@ compat_features:
   #   safari: "15"
   #   safari_ios: "15"
   - api.createImageBitmap.options_colorSpaceConversion_parameter
+
+  # baseline: low
+  # baseline_low_date: 2023-09-18
+  # support:
+  #   chrome: "52"
+  #   chrome_android: "52"
+  #   edge: "79"
+  #   firefox: "93"
+  #   firefox_android: "93"
+  #   safari: "17"
+  #   safari_ios: "17"
+  - api.createImageBitmap.options_premultiplyAlpha_parameter
 
   # baseline: low
   # baseline_low_date: 2023-12-11
