--- a/features/draft/spec/css-page-3.yml.dist
+++ b/features/draft/spec/css-page-3.yml.dist
@@ -8,32 +8,6 @@ status:
     chrome_android: "85"
     edge: "85"
 compat_features:
-  # baseline: high
-  # baseline_low_date: ≤2020-03-24
-  # baseline_high_date: ≤2022-09-24
-  # support:
-  #   chrome: "2"
-  #   chrome_android: "18"
-  #   edge: "12"
-  #   firefox: "19"
-  #   firefox_android: "19"
-  #   safari: ≤13.1
-  #   safari_ios: ≤13.4
-  - css.at-rules.page
-
-  # baseline: high
-  # baseline_low_date: 2021-12-07
-  # baseline_high_date: 2024-06-07
-  # support:
-  #   chrome: "15"
-  #   chrome_android: "18"
-  #   edge: "79"
-  #   firefox: "95"
-  #   firefox_android: "95"
-  #   safari: ≤13.1
-  #   safari_ios: ≤13.4
-  - css.at-rules.page.size
-
   # baseline: low
   # baseline_low_date: 2023-02-14
   # support:
@@ -60,6 +34,15 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "2"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   firefox: "19"
+  #   firefox_android: "19"
+  - css.at-rules.page
+
+  # baseline: false
+  # support:
   #   chrome: "6"
   #   chrome_android: "18"
   #   edge: "12"
@@ -67,6 +50,15 @@ compat_features:
   #   safari_ios: "4.2"
   - css.selectors.left
   - css.selectors.right
+
+  # baseline: false
+  # support:
+  #   chrome: "15"
+  #   chrome_android: "18"
+  #   edge: "79"
+  #   firefox: "95"
+  #   firefox_android: "95"
+  - css.at-rules.page.size
 
   # baseline: false
   # support:
