--- a/features/draft/spec/service-workers.yml.dist
+++ b/features/draft/spec/service-workers.yml.dist
@@ -312,8 +312,9 @@ compat_features:
   #   safari_ios: "11.3"
   - api.ServiceWorkerContainer.startMessages
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-04-05
+  # baseline_high_date: 2024-10-05
   # support:
   #   chrome: "59"
   #   chrome_android: "59"
@@ -324,8 +325,9 @@ compat_features:
   #   safari_ios: "15.4"
   - api.ServiceWorkerRegistration.navigationPreload
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-04-05
+  # baseline_high_date: 2024-10-05
   # support:
   #   chrome: "59"
   #   chrome_android: "59"
