--- a/features/draft/spec/webrtc.yml.dist
+++ b/features/draft/spec/webrtc.yml.dist
@@ -781,8 +781,9 @@ compat_features:
   #   safari_ios: "15.4"
   - api.RTCPeerConnection.canTrickleIceCandidates
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-04-05
+  # baseline_high_date: 2024-10-05
   # support:
   #   chrome: "56"
   #   chrome_android: "56"
