--- a/features/fetch-priority.yml.dist
+++ b/features/fetch-priority.yml.dist
@@ -4,9 +4,9 @@
 status:
   baseline: false
   support:
-    chrome: "102"
-    chrome_android: "102"
-    edge: "102"
+    chrome: "103"
+    chrome_android: "103"
+    edge: "103"
     safari: "17.2"
     safari_ios: "17.2"
 compat_features:
@@ -23,7 +23,6 @@ compat_features:
   - html.elements.link.fetchpriority
   - html.elements.script.fetchpriority
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "102"
@@ -34,3 +33,13 @@ compat_features:
   - api.HTMLImageElement.fetchPriority
   - api.HTMLLinkElement.fetchPriority
   - api.HTMLScriptElement.fetchPriority
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support:
+  #   chrome: "103"
+  #   chrome_android: "103"
+  #   edge: "103"
+  #   safari: "17.2"
+  #   safari_ios: "17.2"
+  - http.headers.Link.fetchpriority
