--- a/features/mix-blend-mode.yml.dist
+++ b/features/mix-blend-mode.yml.dist
@@ -28,8 +28,9 @@ compat_features:
   #   safari_ios: "8"
   - css.properties.mix-blend-mode
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-04-05
+  # baseline_high_date: 2024-10-05
   # support:
   #   chrome: "100"
   #   chrome_android: "100"
