--- a/features/scroll-snap.yml.dist
+++ b/features/scroll-snap.yml.dist
@@ -73,8 +73,9 @@ compat_features:
   - css.properties.scroll-padding-inline-end
   - css.properties.scroll-padding-inline-start
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-04-05
+  # baseline_high_date: 2024-10-05
   # support:
   #   chrome: "69"
   #   chrome_android: "69"
