add to canvas2d instead

--- a/features/canvas-2d.yml
+++ b/features/canvas-2d.yml
@@ -76,6 +76,12 @@ compat_features:
   - api.CanvasRenderingContext2D.transform
   - api.CanvasRenderingContext2D.translate
   - api.CanvasRenderingContext2D.wordSpacing
+  - api.ImageData
+  - api.ImageData.ImageData
+  - api.ImageData.colorSpace
+  - api.ImageData.data
+  - api.ImageData.height
+  - api.ImageData.width
   - api.TextMetrics
   - api.TextMetrics.alphabeticBaseline
   - api.TextMetrics.hangingBaseline
