--- a/features/canvas-2d.yml.dist
+++ b/features/canvas-2d.yml.dist
@@ -109,6 +109,22 @@ compat_features:
   # baseline_low_date: 2015-07-29
   # baseline_high_date: 2018-01-29
   # support:
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   firefox: "3.5"
+  #   firefox_android: "4"
+  #   safari: "3.1"
+  #   safari_ios: "2"
+  - api.ImageData
+  - api.ImageData.data
+  - api.ImageData.height
+  - api.ImageData.width
+
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
   #   chrome: "2"
   #   chrome_android: "18"
   #   edge: "12"
@@ -192,6 +208,19 @@ compat_features:
   #   safari: "9"
   #   safari_ios: "9"
   - api.CanvasRenderingContext2D.ellipse
+
+  # baseline: high
+  # baseline_low_date: 2016-08-02
+  # baseline_high_date: 2019-02-02
+  # support:
+  #   chrome: "36"
+  #   chrome_android: "36"
+  #   edge: "14"
+  #   firefox: "29"
+  #   firefox_android: "29"
+  #   safari: "8"
+  #   safari_ios: "8"
+  - api.ImageData.ImageData
 
   # baseline: high
   # baseline_low_date: 2016-08-02
@@ -313,6 +342,15 @@ compat_features:
   #   safari: "9.1"
   #   safari_ios: "9.3"
   - api.CanvasRenderingContext2D.imageSmoothingQuality
+
+  # baseline: false
+  # support:
+  #   chrome: "92"
+  #   chrome_android: "92"
+  #   edge: "92"
+  #   safari: "15.2"
+  #   safari_ios: "15.2"
+  - api.ImageData.colorSpace
 
   # baseline: false
   # support:
