--- a/features/draft/svg-deprecated.yml
+++ b/features/draft/svg-deprecated.yml
@@ -1,7 +1,8 @@
+draft_date: 2024-10-08
 name: svg-deprecated
 description: Placeholder for deprecated or non-real features
 spec: https://svgwg.org/svg2-draft/
-compat_features: 
+compat_features:
   - api.SVGAElement.ping
   - api.SVGAElement.text
   - api.SVGCursorElement
