--- a/features/svg.yml
+++ b/features/svg.yml
@@ -2,6 +2,8 @@ name: SVG core
 description: The `<svg>` image format creates two-dimensional vector graphics with declarative or scripted interaction and animation.
 spec: https://svgwg.org/svg2-draft/
 caniuse: svg
+status:
+  compat_features: svg.elements.mask.maskUnits
 compat_features:
   - api.DOMParser.parseFromString.svg
   - api.SVGAElement
@@ -800,8 +802,7 @@ compat_features:
   - svg.global_attributes.clip-rule
   - svg.global_attributes.color
   - svg.global_attributes.color-interpolation-filters
-  - svg.global_attributes.cursor
-  - svg.global_attributes.data
+  - svg.global_attributes.data_attributes
   - svg.global_attributes.direction
   - svg.global_attributes.display
   - svg.global_attributes.dominant-baseline
@@ -833,21 +834,68 @@ compat_features:
   - svg.global_attributes.tabindex
   - svg.global_attributes.text-anchor
   - svg.global_attributes.text-decoration
-  - svg.global_attributes.text-overflow
   - svg.global_attributes.text-rendering
   - svg.global_attributes.transform
   - svg.global_attributes.unicode-bidi
   - svg.global_attributes.vector-effect
   - svg.global_attributes.visibility
   - svg.global_attributes.word-spacing
-  #
-  # Included in separate features
-  # - svg.global_attributes.font-family
-  # - svg.global_attributes.font-size
-  # - svg.global_attributes.font-stretch
-  # - svg.global_attributes.font-style
-  # - svg.global_attributes.font-weight
-  # - svg.global_attributes.writing-mode
-  #
-  # Safari claims support, but does not
-  # - css.properties.stroke-color
+
+  # Newer keys, but not feature-worthy
+  - api.SVGElement.focus.options_preventScroll_parameter
+  - api.SVGStyleElement.disabled
+  - svg.global_attributes.requiredExtensions.mathml
+  - api.SVGStyleElement.sheet
+  - api.CanvasRenderingContext2D.drawImage.SVGImageElement_source_image
+  - svg.global_attributes.mask
+  - api.SVGImageElement.crossOrigin
+  - svg.elements.image.crossorigin
+  - api.SVGFESpecularLightingElement.kernelUnitLengthX
+  - api.SVGFESpecularLightingElement.kernelUnitLengthY
+  - svg.elements.feSpecularLighting.kernelUnitLength
+  - api.SVGElement.load_event
+  - api.SVGSVGElement.checkEnclosure
+  - api.SVGSVGElement.checkIntersection
+  - api.SVGSVGElement.getEnclosureList
+  - api.SVGSVGElement.getIntersectionList
+  - svg.elements.path.d.path
+  - api.SVGImageElement.decode
+  - api.SVGImageElement.decoding
+  - svg.elements.image.decoding
+  - api.SVGElement.attributeStyleMap
+  - css.properties.filter.svg_elements
+  - svg.global_attributes.alignment-baseline
+  - svg.global_attributes.baseline-shift
+  - svg.global_attributes.transform-origin
+  - css.at-rules.font-face.OpenType_SVG
+  - api.SVGAElement.rel
+  - api.SVGAElement.relList
+  - svg.elements.a.rel
+  - api.SVGGeometryElement.isPointInFill.point_parameter_DOMPoint
+  - api.SVGGeometryElement.isPointInStroke.point_parameter_DOMPoint
+  - svg.elements.a.referrerpolicy.no-referrer-when-downgrade
+  - svg.elements.a.referrerpolicy.origin-when-cross-origin
+  - svg.elements.a.referrerpolicy.unsafe-url
+  - api.SVGFEGaussianBlurElement.edgeMode
+  - svg.elements.feGaussianBlur.edgeMode
+  - api.SVGMarkerElement.orient
+  - api.SVGScriptElement.crossOrigin
+  - api.SVGAElement.download
+  - svg.elements.a.download
+  - api.SVGAElement.hreflang
+  - api.SVGAElement.referrerPolicy
+  - api.SVGAElement.type
+  - svg.elements.a.hreflang
+  - svg.elements.a.type
+  - svg.elements.textPath.path
+  - svg.elements.textPath.side
+  - api.SVGFEImageElement.crossOrigin
+  - svg.elements.feImage.crossorigin
+  - api.SVGScriptElement.async
+  - api.SVGScriptElement.defer
+  - svg.elements.script.async
+  - svg.elements.script.defer
+  - svg.global_attributes.color-interpolation.linearGradient
+  - svg.global_attributes.color-interpolation
+  - svg.global_attributes.color-interpolation.sRGB
+  - svg.elements.use.data_uri
