--- a/features/svg.yml
+++ b/features/svg.yml
@@ -1,7 +1,8 @@
-name: SVG core
-description: The `<svg>` image format creates two-dimensional vector graphics with declarative or scripted interaction and animation.
+name: SVG
+description: The SVG image format creates two-dimensional vector graphics with declarative or scripted interaction and animation.
 spec: https://svgwg.org/svg2-draft/
 caniuse: svg
+group: svg
 status:
   compat_features: svg.elements.mask.maskUnits
 compat_features:
