--- a/features/text-wrap-style.yml
+++ b/features/text-wrap-style.yml
@@ -6,4 +6,5 @@ compat_features:
   - css.properties.text-wrap-style
   - css.properties.text-wrap-style.auto
   - css.properties.text-wrap-style.balance
+  - css.properties.text-wrap-style.pretty
   - css.properties.text-wrap-style.stable
