--- a/features/channel-messaging.yml.dist
+++ b/features/channel-messaging.yml.dist
@@ -14,6 +14,31 @@ status:
     safari: "5"
     safari_ios: "4.2"
 compat_features:
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "4"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   firefox: "3"
+  #   firefox_android: "4"
+  #   safari: "4"
+  #   safari_ios: "3.2"
+  - api.MessageEvent.ports
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: high
+  # baseline_low_date: 2015-09-22
+  # baseline_high_date: 2018-03-22
+  # support:
+  #   chrome: "2"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   firefox: "41"
+  #   firefox_android: "41"
+  #   safari: "5"
+  #   safari_ios: "4.2"
   - api.MessageChannel
   - api.MessageChannel.MessageChannel
   - api.MessageChannel.port1
