--- a/features/dataset.yml
+++ b/features/dataset.yml
@@ -1,5 +1,5 @@
 name: Dataset
-description: "The `dataset` feature is for attaching and accessing custom data on elements, using either the `dataset` property or attributes prefixed with `data-`."
+description: "The `dataset` API attaches and accesses custom data on elements, using either the `dataset` property of `HTMLElement` or attributes prefixed with `data-`."
 spec: https://html.spec.whatwg.org/multipage/dom.html#embedding-custom-non-visible-data-with-the-data-*-attributes
 caniuse: dataset
 # This matches Caniuse, which specifically notes that support figures are derived from
