--- a/features/navigation.yml.dist
+++ b/features/navigation.yml.dist
@@ -8,6 +8,12 @@ status:
     chrome_android: "102"
     edge: "102"
 compat_features:
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support:
+  #   chrome: "102"
+  #   chrome_android: "102"
+  #   edge: "102"
   - api.NavigateEvent
   - api.NavigateEvent.NavigateEvent
   - api.NavigateEvent.destination
@@ -58,3 +64,30 @@ compat_features:
   - api.NavigationTransition.from
   - api.NavigationTransition.navigationType
   - api.Window.navigation
+
+  # baseline: false
+  # support:
+  #   chrome: "105"
+  #   chrome_android: "105"
+  #   edge: "105"
+  - api.NavigateEvent.canIntercept
+  - api.NavigateEvent.intercept
+  - api.NavigateEvent.scroll
+
+  # baseline: false
+  # support:
+  #   chrome: "118"
+  #   chrome_android: "118"
+  #   edge: "118"
+  - api.NavigateEvent.hasUAVisualTransition
+
+  # baseline: false
+  # support:
+  #   chrome: "123"
+  #   chrome_android: "123"
+  #   edge: "123"
+  - api.Navigation.activation
+  - api.NavigationActivation
+  - api.NavigationActivation.entry
+  - api.NavigationActivation.from
+  - api.NavigationActivation.navigationType
