--- a/features/navigator.yml
+++ b/features/navigator.yml
@@ -1,5 +1,5 @@
 name: Navigator
-description: "The Navigator interface represents the state and the identity of the user agent. It also serve as a generic global under which various APIs are located."
+description: "The Navigator interface represents the state and the identity of the user agent. It also serves as a generic global under which many different APIs are located, from `clipboard` to `wakeLock`."
 spec: https://html.spec.whatwg.org/multipage/system-state.html#the-navigator-object
 status:
   compute_from: api.Navigator
