--- a/features/notifications.yml
+++ b/features/notifications.yml
@@ -16,9 +16,9 @@
 # MDN: Notifications API
 # CIU: Web Notifications
 #
-# Going with the generally preferred pattern of not including "web".
+# Going with the generally preferred pattern of not including "web" nor "API".
 #
-name: Notifications API
+name: Notifications
 
 # Description reasoning
 #
