--- a/features/notifications.yml
+++ b/features/notifications.yml
@@ -34,7 +34,7 @@ name: Notifications API
 # - asynchronous (not user-interactive)
 # - often platform integrated/compatible
 #
-description: The Notifications API displays messages to the user outside of the viewport, typically using the notification system of the host operating system.
+description: The Notifications API displays messages to the user outside of the browser, typically using the notification system of the host operating system.
 spec: https://notifications.spec.whatwg.org/
 caniuse: notifications
 
