--- a/features/notifications.yml
+++ b/features/notifications.yml
@@ -34,7 +34,7 @@ name: Notifications
 # - asynchronous (not user-interactive)
 # - often platform integrated/compatible
 #
-description: The Notifications API displays messages to the user outside of the browser, typically using the notification system of the host operating system.
+description: The Notifications API displays messages to the user outside of the browser, typically using the notification system of the host operating system. This feature is solely client-side, and does not integrate with server-originating notifications.
 spec: https://notifications.spec.whatwg.org/
 caniuse: notifications
 
