--- a/features/webxr-camera.yml
+++ b/features/webxr-camera.yml
@@ -1,5 +1,5 @@
 name: Raw camera access for WebXR
-description: Direct access to the camera allowing pose-synchronized camera images within a WebXR session.
+description: The `XRView.camera` property provides direct access to pose-synchronized camera images within a WebXR session.
 spec: https://immersive-web.github.io/raw-camera-access/
 group: webxr
 compat_features:
