--- a/features/draft/spec/indexeddb-3.yml
+++ b/features/draft/spec/indexeddb-3.yml
@@ -1,7 +1,7 @@
+draft_date: 2024-09-09
 name: Indexed Database API 3.0
 description: TODO
 spec: https://w3c.github.io/IndexedDB/
-group: storage
 compat_features:
   - api.IDBCursor
   - api.IDBCursor.advance
