--- a/features/storage.yml
+++ b/features/storage.yml
@@ -1,5 +1,5 @@
 name: Storage
-description: "`Storage` is for access and maniupulation of a particular domain's session or local storage, include the addition, modification, or deletion of stored data using name/value pairs."
+description: "`Storage` is for access and manipulation of a particular domain's stored data either for the duration of a session, or persistent across sessions, using name/value pairs."
 spec: https://storage.spec.whatwg.org/
 group: storage
 caniuse: namevalue-storage
