--- a/features/layout-instability.yml
+++ b/features/layout-instability.yml
@@ -1,7 +1,7 @@
-draft_date: 2024-09-09
-name: Layout Instability
-description: TODO
+name: Layout instability
+description: The `LayoutShift` interface provides a way to measure and report on the layout stability of web pages based on movements of the elements on the page.
 spec: https://wicg.github.io/layout-instability/
+group: performance
 compat_features:
   - api.LayoutShift
   - api.LayoutShift.hadRecentInput
