--- a/features/resource-size.yml
+++ b/features/resource-size.yml
@@ -4,4 +4,4 @@ spec:
   - https://w3c.github.io/resource-timing/#dom-performanceresourcetiming-decodedbodysize
   - https://w3c.github.io/resource-timing/#dom-performanceresourcetiming-encodedbodysize
   - https://w3c.github.io/resource-timing/#dom-performanceresourcetiming-transfersize
-group: resource-timing
+group: performance
