--- a/features/element-timing.yml
+++ b/features/element-timing.yml
@@ -1,7 +1,7 @@
-draft_date: 2024-09-09
-name: Element Timing API
-description: TODO
+name: Element timing
+description: The `PerformanceElementTiming` interface contains render timing information for image and text node elements the developer annotated with an `elementtiming` attribute for observation.
 spec: https://wicg.github.io/element-timing/
+group: performance
 compat_features:
   - api.Element.elementTiming
   - api.PerformanceElementTiming
