--- a/features/event-timing.yml
+++ b/features/event-timing.yml
@@ -1,7 +1,9 @@
-draft_date: 2024-09-09
-name: Event Timing API
+name: Event timing
 description: TODO
 spec: https://w3c.github.io/event-timing/
+group: performance
+status:
+  compute_from: api.PerformanceEventTiming
 compat_features:
   - api.EventCounts
   - api.Performance.eventCounts
