--- a/features/event-timing.yml.dist
+++ b/features/event-timing.yml.dist
@@ -4,10 +4,13 @@
 status:
   baseline: false
   support:
-    chrome: "96"
-    chrome_android: "96"
-    edge: "96"
+    chrome: "76"
+    chrome_android: "76"
+    edge: "79"
+    firefox: "89"
+    firefox_android: "89"
 compat_features:
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "76"
@@ -32,7 +35,6 @@ compat_features:
   - api.Performance.eventCounts
   - api.PerformanceEventTiming.target
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "96"
