--- a/features/shared-storage-non-cookie.yml
+++ b/features/shared-storage-non-cookie.yml
@@ -1,5 +1,5 @@
 name: Extending Storage Access API (SAA) to non-cookie storage
-description: TODO
+description: "This extension of the Storage Access API enables content in cross-site iframes to request access to first-party data beyond cookies."
 spec: https://privacycg.github.io/saa-non-cookie-storage/
 group: storage
 compat_features:
