--- a/features/speak-as.yml
+++ b/features/speak-as.yml
@@ -1,6 +1,5 @@
 name: speak-as
-description: The `speak-as` CSS property sets how any element's content is spoken.
-# Note: This feature is distinct from `speak-as` in a @counter-style rule.
+description: The `speak-as` CSS property sets how any element's content is spoken. Not to be confused with the `speak-as` descriptor of `@counter-style` at-rules.
 spec: https://drafts.csswg.org/css-speech-1/#speaking-props-speak-as
 group:
   - speech
