Fix typo in status, add headline feature

--- a/features/svg.yml
+++ b/features/svg.yml
@@ -4,7 +4,7 @@ spec: https://svgwg.org/svg2-draft/
 caniuse: svg
 group: svg
 status:
-  compat_features: svg.elements.mask.maskUnits
+  compute_from: svg.elements.mask.maskUnits
 compat_features:
   - api.DOMParser.parseFromString.svg
   - api.SVGAElement
