Revise description for `symbol`
Following up on https://github.com/web-platform-dx/web-features/pull/1669

--- a/features/symbol.yml
+++ b/features/symbol.yml
@@ -1,5 +1,5 @@
 name: Symbol
-description: The `Symbol` type is used for unique property keys – a symbol never clashes with any other property key (symbol or string).
+description: A `Symbol` value is a unique, non-enumerable primitive value used for encapsulation or information hiding. For example, a symbol can be a key of an object that can never collide with any other key.
 spec: https://tc39.es/ecma262/multipage/fundamental-objects.html#sec-symbol-objects
 group: primitive-types
 status:
