updated hanging punctuation description

--- a/features/hanging-punctuation.yml
+++ b/features/hanging-punctuation.yml
@@ -1,5 +1,5 @@
 name: Hanging punctuation
-description: The CSS `hanging punctuation` property puts punctuation characters, such as `quote` or `bullet`, outside of the box to align the text with the rest of the document.
+description: The `hanging-punctuation` CSS property puts punctuation characters outside of the box to align the text with the rest of the document.
 spec: https://drafts.csswg.org/css-text-4/#hanging-punctuation-property
 caniuse: css-hanging-punctuation
 compat_features:
