--- a/features/remote-playback.yml
+++ b/features/remote-playback.yml
@@ -1,4 +1,4 @@
-name: Remote Playback
+name: Remote playback
 description: The Remote Playback API allows webpages to initiate and control playback of media on connected remote devices, such as smart TVs with AirPlay or Chromecast capabilities.
 spec: https://w3c.github.io/remote-playback/
 status:
