--- a/features/remote-playback.yml
+++ b/features/remote-playback.yml
@@ -14,3 +14,5 @@ compat_features:
   - api.RemotePlayback.watchAvailability
   - api.HTMLMediaElement.disableRemotePlayback
   - api.HTMLMediaElement.remote
+  - html.elements.audio.disableremoteplayback
+  - html.elements.video.disableremoteplayback
