--- a/features/postmessage.yml
+++ b/features/postmessage.yml
@@ -1,4 +1,4 @@
-name: PostMessage
+name: postMessage
 description: "The `postMessage()` method safely enables cross-origin communication for windows and workers, including popups and iframes."
 spec: https://html.spec.whatwg.org/multipage/web-messaging.html#web-messaging
 caniuse: x-doc-messaging
