--- a/features/postmessage.yml
+++ b/features/postmessage.yml
@@ -1,5 +1,5 @@
 name: postMessage
-description: "The `postMessage()` method safely enables cross-origin communication for windows and workers, including popups and iframes."
+description: "The `postMessage()` global method sends cross-origin messages to windows and workers, including popups and iframes. Also known as cross-document messaging."
 spec: https://html.spec.whatwg.org/multipage/web-messaging.html#web-messaging
 caniuse: x-doc-messaging
 group: messaging
