--- a/features/server-sent-events.yml
+++ b/features/server-sent-events.yml
@@ -1,5 +1,5 @@
 name: Server-sent events
-description: "The `EventSource` API creates a persistent one-way connection to the originating server for receiving streams of events."
+description: The `EventSource` API creates a connection to a server and listens to a stream of events sent by the server.
 spec: https://html.spec.whatwg.org/multipage/server-sent-events.html#server-sent-events
 caniuse: eventsource
 group: messaging
