--- a/features/channel-messaging.yml
+++ b/features/channel-messaging.yml
@@ -14,4 +14,5 @@ compat_features:
   - api.MessagePort
   - api.MessagePort.close
   - api.MessagePort.message_event
+  - api.MessagePort.postMessage
   - api.MessagePort.start
