--- a/features/channel-messaging.yml.dist
+++ b/features/channel-messaging.yml.dist
@@ -46,4 +46,5 @@ compat_features:
   - api.MessagePort
   - api.MessagePort.close
   - api.MessagePort.message_event
+  - api.MessagePort.postMessage
   - api.MessagePort.start
