--- a/features/paint.yml.dist
+++ b/features/paint.yml.dist
@@ -8,6 +8,68 @@ status:
     chrome_android: "65"
     edge: "79"
 compat_features:
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support:
+  #   chrome: "65"
+  #   chrome_android: "65"
+  #   edge: "79"
   - api.CSS.paintWorklet_static
+  - api.PaintRenderingContext2D
+  - api.PaintRenderingContext2D.beginPath
+  - api.PaintRenderingContext2D.clearRect
+  - api.PaintRenderingContext2D.clip
+  - api.PaintRenderingContext2D.createLinearGradient
+  - api.PaintRenderingContext2D.createPattern
+  - api.PaintRenderingContext2D.createRadialGradient
+  - api.PaintRenderingContext2D.drawImage
+  - api.PaintRenderingContext2D.fill
+  - api.PaintRenderingContext2D.fillRect
+  - api.PaintRenderingContext2D.fillStyle
+  - api.PaintRenderingContext2D.filter
+  - api.PaintRenderingContext2D.getLineDash
+  - api.PaintRenderingContext2D.globalAlpha
+  - api.PaintRenderingContext2D.globalCompositeOperation
+  - api.PaintRenderingContext2D.imageSmoothingEnabled
+  - api.PaintRenderingContext2D.imageSmoothingQuality
+  - api.PaintRenderingContext2D.isPointInPath
+  - api.PaintRenderingContext2D.isPointInStroke
+  - api.PaintRenderingContext2D.lineCap
+  - api.PaintRenderingContext2D.lineDashOffset
+  - api.PaintRenderingContext2D.lineJoin
+  - api.PaintRenderingContext2D.lineWidth
+  - api.PaintRenderingContext2D.miterLimit
+  - api.PaintRenderingContext2D.resetTransform
+  - api.PaintRenderingContext2D.restore
+  - api.PaintRenderingContext2D.rotate
+  - api.PaintRenderingContext2D.save
+  - api.PaintRenderingContext2D.scale
+  - api.PaintRenderingContext2D.setLineDash
+  - api.PaintRenderingContext2D.shadowBlur
+  - api.PaintRenderingContext2D.shadowColor
+  - api.PaintRenderingContext2D.shadowOffsetX
+  - api.PaintRenderingContext2D.shadowOffsetY
+  - api.PaintRenderingContext2D.stroke
+  - api.PaintRenderingContext2D.strokeRect
+  - api.PaintRenderingContext2D.strokeStyle
+  - api.PaintRenderingContext2D.transform
+  - api.PaintRenderingContext2D.translate
+  - api.PaintSize
+  - api.PaintSize.height
+  - api.PaintSize.width
   - api.PaintWorkletGlobalScope
+  - api.PaintWorkletGlobalScope.devicePixelRatio
+  - api.PaintWorkletGlobalScope.registerPaint
   - css.types.image.paint
+
+  # baseline: false
+  # support:
+  #   chrome: "68"
+  #   chrome_android: "68"
+  #   edge: "79"
+  - api.PaintRenderingContext2D.getTransform
+  - api.PaintRenderingContext2D.setTransform
+
+  # baseline: false
+  # support: {}
+  - css.types.image.paint.additional_parameters
