Updates CSS transitions group

--- a/features/transitions-css.yml
+++ b/features/transitions-css.yml
@@ -2,7 +2,7 @@ name: Transitions (CSS)
 description: The `transition` shorthand CSS property sets how changes to an element's styles may occur over time. Transitions can be applied to specific CSS properties, all properties, or none.
 spec: https://drafts.csswg.org/css-transitions-2/
 caniuse: css-transitions
-group: transitions-css
+group: transitions
 status:
   compute_from: css.properties.transition
 compat_features:
