--- a/features/scroll-snap.yml
+++ b/features/scroll-snap.yml
@@ -1,22 +1,56 @@
 name: Scroll snap
 description: CSS scroll snap controls the panning and scrolling behavior within a scroll container.
-spec: https://drafts.csswg.org/css-scroll-snap-1/
+spec: https://drafts.csswg.org/css-scroll-snap-2/
 caniuse: css-snappoints
 group: scrolling
-# Override the status to match caniuse.com. Even using just scroll-snap-type
-# doesn't match because of https://bugzil.la/1749352 increasing the Firefox
-# version from 68 to 99.
+# Override the status to match caniuse.com.
 #
 # TODO: Decide if https://bugzil.la/1749352 warrants the partial implementation
 # status and align BCD and caniuse.
 status:
-  baseline: high
-  baseline_low_date: 2019-07-09
-  support:
-    chrome: "69"
-    chrome_android: "69"
-    edge: "79"
-    firefox: "68"
-    firefox_android: "68"
-    safari: "11"
-    safari_ios: "11"
+  compute_from: css.properties.scroll-snap-align
+compat_features:
+  - css.properties.scroll-margin
+  - css.properties.scroll-margin-block
+  - css.properties.scroll-margin-block-end
+  - css.properties.scroll-margin-block-start
+  - css.properties.scroll-margin-bottom
+  - css.properties.scroll-margin-inline
+  - css.properties.scroll-margin-inline-end
+  - css.properties.scroll-margin-inline-start
+  - css.properties.scroll-margin-left
+  - css.properties.scroll-margin-right
+  - css.properties.scroll-margin-top
+  - css.properties.scroll-padding
+  - css.properties.scroll-padding-block
+  - css.properties.scroll-padding-block-end
+  - css.properties.scroll-padding-block-start
+  - css.properties.scroll-padding-bottom
+  - css.properties.scroll-padding-inline
+  - css.properties.scroll-padding-inline-end
+  - css.properties.scroll-padding-inline-start
+  - css.properties.scroll-padding-left
+  - css.properties.scroll-padding-right
+  - css.properties.scroll-padding-top
+  - css.properties.scroll-snap-align
+  - css.properties.scroll-snap-stop
+  - css.properties.scroll-snap-type
+  - css.properties.scroll-padding-block-end.auto
+  - css.properties.scroll-padding-block-start.auto
+  - css.properties.scroll-padding-block.auto
+  - css.properties.scroll-padding-inline-end.auto
+  - css.properties.scroll-padding-inline-start.auto
+  - css.properties.scroll-padding-inline.auto
+  - css.properties.scroll-padding.auto
+  - css.properties.scroll-snap-align.center
+  - css.properties.scroll-snap-align.end
+  - css.properties.scroll-snap-align.none
+  - css.properties.scroll-snap-align.start
+  - css.properties.scroll-snap-stop.always
+  - css.properties.scroll-snap-stop.normal
+  - css.properties.scroll-snap-type.block
+  - css.properties.scroll-snap-type.both
+  - css.properties.scroll-snap-type.inline
+  - css.properties.scroll-snap-type.none
+  - css.properties.scroll-snap-type.x
+  - css.properties.scroll-snap-type.y
