Add cross-document view transitions and transition selection and add a new group (#1914)

--- a/features/view-transitions.yml.dist
+++ b/features/view-transitions.yml.dist
@@ -38,3 +38,4 @@ compat_features:
   - api.ViewTransition.skipTransition
   - api.ViewTransition.updateCallbackDone
   - css.properties.view-transition-name
+  - css.properties.view-transition-name.none
