--- a/features/reading-flow.yml
+++ b/features/reading-flow.yml
@@ -1,5 +1,5 @@
 name: reading-flow
-description: The `reading-flow` CSS property sets the order in which flex or grid elements are rendered to speech or reached via sequential navigation methods.
+description: The `reading-flow` CSS property sets the order in which flex or grid elements are rendered to speech or reached via focus navigation.
 spec: https://drafts.csswg.org/css-display-4/#reading-flow
 group: css
 compat_features:
