--- a/features/hanging-punctuation.yml
+++ b/features/hanging-punctuation.yml
@@ -1,7 +1,8 @@
 name: Hanging punctuation
 description: The `hanging-punctuation` CSS property puts punctuation characters outside of the box to align the text with the rest of the document.
 spec: https://drafts.csswg.org/css-text-4/#hanging-punctuation-property
-caniuse: css-hanging-punctuation
+# TODO: Enable once  https://github.com/Fyrd/caniuse/issues/7184 is resolved.
+# caniuse: css-hanging-punctuation
 compat_features:
   - css.properties.hanging-punctuation
   - css.properties.hanging-punctuation.allow-end
