--- a/features/hyphenate-limit-chars.yml
+++ b/features/hyphenate-limit-chars.yml
@@ -1,5 +1,5 @@
 name: Hyphenate limit chars
-description: The `hyphenate-limit-chars` CSS property sets the number of characters in a word before it is hyphenated and the minimum number of characters before and after the hyphen.
+description: The `hyphenate-limit-chars` CSS property sets the number of characters in a word before it is hyphenated and the minimum number of characters on either side of the hyphen.
 spec: https://drafts.csswg.org/css-text-4/#hyphenate-char-limits
 group: text-wrap
 compat_features:
