--- a/features/hyphenate-character.yml
+++ b/features/hyphenate-character.yml
@@ -1,5 +1,5 @@
 name: Hyphenate character
-description: The `hyphenate-character` CSS property sets the character (or string) to use at the end of a line before a hyphenation break.
+description: The `hyphenate-character` CSS property sets the character or string to use at the end of a line before a line break.
 spec: https://drafts.csswg.org/css-text-4/#hyphenate-character
 group: text-wrap
 compat_features:
