--- a/features/shared-storage-non-cookie.yml
+++ b/features/shared-storage-non-cookie.yml
@@ -1,4 +1,4 @@
-name: Extending Storage Access API (SAA) to non-cookie storage
+name: Non-cookie storage access
 description: "This extension of the Storage Access API enables content in cross-site iframes to request access to first-party data beyond cookies."
 spec: https://privacycg.github.io/saa-non-cookie-storage/
 group: storage
